Fix color codes and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ nav ul {
 }
 
 #contents, #favs, #facts, #types {
-  color: #fff;
+  color: #93a1a1;
 }
 
 .dfn + strong {
@@ -39,7 +39,7 @@ a:not(.no-highlight) {
 }
 
 ol:first-child {
-  color: #719e07;
+  color: #719e47;
 }
 
 ol:last-child {
@@ -54,6 +54,6 @@ ol:last-child {
   background-color: #586e75;
 }
 
-.types >li:nth-child(3n) {
+.types > li:nth-child(3n) {
   background-color: #d04b16;
 }
